--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <div id="stickyWrapper"> <!-- start navbar -->
 	<ul class="sticky-navigation">
-  		<li><a class="navButton" href="/">Education</a></li>
+  		<li><a class="navButton" href="stripesblog.html">Blog</a></li>
   		<li><a class="navButton" href="/">Experience</a></li>
   		<li><a class="navButton" id="selected" href="/"><img src="./images/littlemac.png" /></a></li>
   		<li><a class="navButton" href="/">Portfolio</a></li>
