text edit on blog post

--- a/stripesblog.html
+++ b/stripesblog.html
@@ -299,7 +299,7 @@ a, a:visited, a:link, a:hover, a:active {
 
 <h4>Domains in context</h4>
 
-<p>A domain, in this context, can be defined as an area or category of activity. To develop the intuition behind this idea, consider all the different roles and activities you participate in. Using myself as an example, I am a student/economist, a family member, a roommate, a member of the Church of Jesus Christ of Latter Day Saints, an entrepreneur, an athlete, and a musician, just to name a few things (I could keep going). These are all different domains.</p>
+<p>A domain, in this context, can be defined as an area or category of activity. To develop the intuition behind this idea, consider all the different roles and activities you participate in. Using myself as an example, I am a student/economist, a family member, a roommate, an entrepreneur, an athlete, and a musician, just to name a few things (I could keep going). These are all different domains.</p>
 
 <p>The concept of domain dependent is that while we might understand and apply a principle in one domain, we tend to forget it and act differently in another domain. An example of this is the wealthy banker. While routinely employing the porter to carry heavy luggage to his flat, he also routinely lifts weights at the gym. Aren't carrying heavy bags up the stairs and going to the gym essentially fulfilling the same purpose?</p>
 
