--- a/index.html
+++ b/index.html
@@ -44,16 +44,35 @@
 <div class="wrapper">
 
 	<div class="firstRow">
-		<div class="edCol">
+		<div class="edColLeft">
+			<a href="http://www.varacloud.com/new" alt="Varacloud IT Solutions"><img src="./images/varacloudSqr.png"/></a>
 		</div>
-		<div class="edCol">
+		<div class="edColCenter">
+			<a href="https://plus.google.com/u/0/107201651559511822274/posts" alt="Google Community Leaders"><img src="./images/clpSqr.png"/></a>
 		</div>
-		<div class="edColLast">
+		<div class="edColRight">
+			<a href="http://www.byu.edu" alt="Brigham Young University"><img src="./images/byuSqr.png"/></a>
 		</div>
 	</div>
 	
 	<div class="secondRow">
+		<div class="5column">
+			<a href="https://www.facebook.com/mac.cobb.3" alt="Facebook"><img src="./images/facebookSqr.png"/></a>
+		</div>
+		<div class="5column">
+			<a href="https://plus.google.com/u/0/109232243812056279766/posts" alt="Google Plus"><img src="./images/googleplusSqr.png"/></a>
+		</div>
+		<div class="5column">
+			<a href="http://www.linkedin.com/profile/view?id=240045339&trk=nav_responsive_tab_profile" alt="LinkedIn"><img src="./images/linkedinSqr.png"/></a>
+		</div>
+		<div class="5column">
+			<a href="http://instagram.com/mcintirecobb" alt="Instagram"><img src="./images/instaSqr.png"/></a>
+		</div>
+		<div class="5columnLast">
+			<a href="https://github.com/mcstripes" alt="Github"><img src="./images/githubSqr.png"/></a>
+		</div>
 	</div>
+	
 	
 	<div class="thirdRow">
 	</div>
