--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
 	</div>
 	
 	<div class="secondRow">
-		<div class="5column">
+		<div class="five-column">
 			<a href="https://www.facebook.com/mac.cobb.3" alt="Facebook"><img src="./images/facebookSqr.png"/></a>
 		</div>
-		<div class="5column">
+		<div class="five-column">
 			<a href="https://plus.google.com/u/0/109232243812056279766/posts" alt="Google Plus"><img src="./images/googleplusSqr.png"/></a>
 		</div>
-		<div class="5column">
+		<div class="five-column">
 			<a href="http://www.linkedin.com/profile/view?id=240045339&trk=nav_responsive_tab_profile" alt="LinkedIn"><img src="./images/linkedinSqr.png"/></a>
 		</div>
-		<div class="5column">
+		<div class="five-column">
 			<a href="http://instagram.com/mcintirecobb" alt="Instagram"><img src="./images/instaSqr.png"/></a>
 		</div>
-		<div class="5columnLast">
+		<div class="five-column">
 			<a href="https://github.com/mcstripes" alt="Github"><img src="./images/githubSqr.png"/></a>
 		</div>
 	</div>
