--- a/index.html
+++ b/index.html
@@ -1,91 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-    	<meta charset="utf-8">
-    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    	<meta name="description" content="Resume, portfolio, and works by Mac Cobb.">
-    	<meta name="author" content="Mac Cobb">
-    	
-		<link type="text/css" href="stripes.css" rel="stylesheet">
-		<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,600' rel='stylesheet' type='text/css'>
-		
-		<script src="./js/jquery.min.js"></script>
-    	<script src="./js/waypoints.js"></script>
-   	 	<script src="./js/waypoints-sticky.js"></script>
-    	<script type="text/javascript">
-        	$(document).ready(function () {
-            	$('.sticky-navigation').waypoint('sticky');
-        	});
-   		</script>
 
-    	<title>Mac Cobb</title>
-		
-	</head>
-	
-<body>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-<div id="colorBar">
-</div>
+    <title>Varacloud IT Solutions</title>
 
-<div id="mainRow">
-</div>
+    <!-- Bootstrap Core CSS -->
+    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
-<div id="stickyWrapper"> <!-- start navbar -->
-	<ul class="sticky-navigation">
-  		<li><a class="navButton" href="stripesblog.html">Blog</a></li>
-  		<li><a class="navButton" href="/">Experience</a></li>
-  		<li><a class="navButton" id="selected" href="/"><img src="./images/littlemac.png" /></a></li>
-  		<li><a class="navButton" href="/">Portfolio</a></li>
-  		<li><a class="navButton" href="/">Skillset</a></li>
-	</ul>
-	
-</div> <!-- end navbar wrapper -->
+    <!-- Fonts -->
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
-<div class="wrapper">
+    <!-- Custom Theme CSS -->
+    <link href="css/grayscale.css" rel="stylesheet">
 
-	<div class="firstRow">
-		<div class="edColLeft">
-			<a href="http://www.varacloud.com/new" alt="Varacloud IT Solutions"><img src="./images/varacloudSqr.png"/></a>
-		</div>
-		<div class="edColCenter">
-			<a href="https://plus.google.com/u/0/107201651559511822274/posts" alt="Google Community Leaders"><img src="./images/clpSqr.png"/></a>
-		</div>
-		<div class="edColRight">
-			<a href="http://www.byu.edu" alt="Brigham Young University"><img src="./images/byuSqr.png"/></a>
-		</div>
-	</div>
-	
-	<div class="secondRow">
-		<div class="five-column">
-			<a href="https://www.facebook.com/mac.cobb.3" alt="Facebook"><img src="./images/facebookSqr.png"/></a>
-		</div>
-		<div class="five-column">
-			<a href="https://plus.google.com/u/0/109232243812056279766/posts" alt="Google Plus"><img src="./images/googleplusSqr.png"/></a>
-		</div>
-		<div class="five-column">
-			<a href="http://www.linkedin.com/profile/view?id=240045339&trk=nav_responsive_tab_profile" alt="LinkedIn"><img src="./images/linkedinSqr.png"/></a>
-		</div>
-		<div class="five-column">
-			<a href="http://instagram.com/mcintirecobb" alt="Instagram"><img src="./images/instaSqr.png"/></a>
-		</div>
-		<div class="five-column">
-			<a href="https://github.com/mcstripes" alt="Github"><img src="./images/githubSqr.png"/></a>
-		</div>
-	</div>
-	
-	
-	<div class="thirdRow">
-	</div>
-	
-	<div class="fourthRow">
-	</div>
-	
-	<div class="fifthRow">
-	</div>
-	
-	<div class="sixthRow">
-		<p class="footer">Created by Mac Cobb, 2013. Version 0.1.2</p>
-	</div>
-</div> <!--wrapper-->
+</head>
+
+<body id="page-top" data-spy="scroll" data-target=".navbar-custom">
+
+    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                    <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand" href="#page-top">
+                    <i class="fa fa-play-circle"></i>  <span class="light">Varacloud</span> IT Solutions
+                </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+                <ul class="nav navbar-nav">
+                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#about">About</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#download">Business</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <section class="intro">
+        <div class="intro-body">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
+                        <h1 class="brand-heading">freedom</h1>
+                        <p class="intro-text">Take your office anywhere you want to go, and rediscover freedom along the way.</p>
+                        <div class="page-scroll">
+                            <a href="#about" class="btn btn-circle">
+                                <i class="fa fa-angle-double-down animated"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="about" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>About Varacloud</h2>
+                <p>Varacloud is an IT consulting firm specializing in web technologies and cloud software services. We believe that IT should simplify and enhance our workplace, not distract from it. Varacloud specializes in tools to liberate your office.</p>
+                <p>While Varacloud is based out of Phoenix Arizona, we can work on any project, anywhere, using the services and tools we offer our clients.  </p>
+                <p>Your business can also operate anywhere, even far away from your office. Contact us to learn how to make your computer IT work for you.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="download" class="content-section text-center">
+        <div class="download-section">
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h2>Business is closed</h2>
+                    <p>Sorry! We understand the importance of education, and our consultants are currently pursuing graduate degrees. If you need IT help, contact us and we will point you in the right direction.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Contact Varacloud</h2>
+                <p>Let's work together.</p>
+                <p>(480) 788-9425</p>
+                <!-- <ul class="list-inline banner-social-buttons">
+                    <li><a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                    </li>
+                    <li><a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                    </li>
+                    <li><a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+                    </li>
+                </ul> -->
+            </div>
+        </div>
+    </section>
+
+    <div id="map"></div>
+
+    <!-- Core JavaScript Files -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+    <!-- Google Maps API Key - You will need to use your own API key to use the map feature -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="js/grayscale.js"></script>
+
 </body>
+
 </html>
