--- a/IssueCoder/index.html
+++ b/IssueCoder/index.html
@@ -118,7 +118,7 @@
 		<!-- ==== SECTION DIVIDER1 -->
 		<section class="section-divider textdivider divider1">
 			<div class="container">
-				<h1>"IssueCoder the most efficient and cost effective e-discovery solution we have used to date. We highly recommend IssueCoder for your next project."</h1>
+				<h1>"IssueCoder is the most efficient and cost effective e-discovery solution we have used to date. We highly recommend IssueCoder for your next project."</h1>
 				<hr>
 				<p>- Jonathan Frettenburg, Earl & Dixon PLC</p>
 			</div><!-- container -->
