--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Varacloud</h2>
-                <p>Varacloud is an IT consulting firm specializing in web technologies and cloud software services. We believe that IT should simplify and enhance our workplace, not distract from it. Varacloud specializes in tools to liberate your office.</p>
+                <p>Varacloud is an IT consulting firm specializing in web technologies and cloud services. We believe that IT should simplify and enhance our workplace, not distract from it. Varacloud specializes in tools to liberate your office.</p>
                 <p>While Varacloud is based out of Phoenix Arizona, we can work on any project, anywhere, using the services and tools we offer our clients.  </p>
                 <p>Your business can also operate anywhere, even far away from your office. Contact us to learn how to make your computer IT work for you.</p>
             </div>
